syntax = "proto3";

package go_microservice_grpc;

option go_package="./helloworld";

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

service HelloworldService {
    rpc SayHello(HelloRequest) returns (HelloResponse) {}
    rpc SayHelloServerStream(HelloRequest) returns (stream HelloResponse) {}
    rpc SayHelloClientStream(stream HelloRequest) returns (HelloResponse) {}
    rpc SayHelloBidirectionalStream(stream HelloRequest) returns (stream HelloResponse) {}
}